--- a/src/app/components/financial-manager/insert-payment/insert-payment.component.html
+++ b/src/app/components/financial-manager/insert-payment/insert-payment.component.html
@@ -113,27 +113,23 @@
               class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"
             >
               <tr>
-                <th scope="col" class="px-6 py-3">Price</th>
-                <th scope="col" class="px-6 py-3">Firstname</th>
-                <th scope="col" class="px-6 py-3">Lastname</th>
-                <th scope="col" class="px-6 py-3">registration number</th>
+                <th scope="col" class="px-6 py-3">Date</th>
+                <th scope="col" class="px-6 py-3">Amount</th>
               </tr>
             </thead>
             <tbody>
               <tr
-                *ngFor="let toDo of pendingItems"
+                *ngFor="let payment of pendingItems"
                 class="bg-white border-b dark:bg-gray-800 dark:border-gray-700"
               >
                 <th
                   scope="row"
                   class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
                 >
-                  {{ toDo.price }}
+                  {{ payment.createdAt }}
                 </th>
-                <td class="px-6 py-4">{{ toDo.firstname }}</td>
-                <td class="px-6 py-4">{{ toDo.lastname }}</td>
                 <td class="px-6 py-4">
-                  {{ toDo.registration_number }}
+                  {{ payment.amount }}
                 </td>
               </tr>
             </tbody>
