--- a/src/app/components/sidebar/customer-sidebar/customer-sidebar.component.html
+++ b/src/app/components/sidebar/customer-sidebar/customer-sidebar.component.html
@@ -181,6 +181,25 @@
             Bills
           </a>
         </li>
+        <li class="items-center">
+          <a
+            [routerLink]="['retrieve-car']"
+            class="text-xs uppercase py-3 font-bold block"
+            routerLinkActive
+            #bill="routerLinkActive"
+            [ngClass]="
+              bill.isActive
+                ? 'text-red-600 hover:text-red-700'
+                : 'text-blueGray-700 hover:text-blueGray-500'
+            "
+          >
+            <i
+              class="fas fa-tools mr-2 text-sm"
+              [ngClass]="bill.isActive ? 'opacity-75' : 'text-blueGray-300'"
+            ></i>
+            Retrievable car
+          </a>
+        </li>
       </ul>
     </div>
   </div>
