update recover success

--- a/src/app/components/customer/retrive-car/retrive-car.component.html
+++ b/src/app/components/customer/retrive-car/retrive-car.component.html
@@ -44,9 +44,11 @@
                   </td>
                   <td class="px-6 py-4">
                     {{ repair.total_amount }}
+                    {{ repair.is_retrieved }}
                   </td>
                   <td class="px-6 py-4">
                     <button
+                      *ngIf="repair.is_retrieved === true"
                       (click)="recover(repair._id)"
                       class="bg-green-400 text-white active:bg-green-400 font-bold uppercase text-xs px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none mr-1 ease-linear transition-all duration-150"
                     >
