--- a/src/app/components/workshop-manager/repairs-on-process/repairs-on-process.component.html
+++ b/src/app/components/workshop-manager/repairs-on-process/repairs-on-process.component.html
@@ -52,7 +52,7 @@
                         "
                         class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
                       >
-                        Button
+                        Set as done
                       </button>
                     </td>
                   </tr>
