--- a/src/app/components/customer/repairs-advancement/repairs-advancement.component.html
+++ b/src/app/components/customer/repairs-advancement/repairs-advancement.component.html
@@ -11,64 +11,64 @@
             </h6>
           </div>
         </div>
-
-        <div class="relative overflow-x-auto">
-          <table
-            class="w-full text-sm text-left text-gray-500 dark:text-gray-400"
-          >
-            <thead
-              class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"
-            >
-              <tr>
-                <th scope="col" class="px-6 py-3">Advancement</th>
-                <th scope="col" class="px-6 py-3">Brand</th>
-                <th scope="col" class="px-6 py-3">Model</th>
-                <th scope="col" class="px-6 py-3">Registration number</th>
-              </tr>
-            </thead>
-            <tbody>
-              <ng-container *ngFor="let repair of unpaid; let i = index">
-                <tr
-                  class="bg-white border-b dark:bg-gray-800 dark:border-gray-700"
-                >
-                  <th
-                    scope="row"
-                    class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
-                  >
-                    <!-- Progress bar -->
-                    <div
-                      class="w-full bg-gray-200 rounded-full h-2.5 dark:bg-gray-700"
-                    >
-                      <div
-                        class="bg-blue-600 h-2.5 rounded-full"
-                        style="width: {{
-                          (100 / (repair.data.done + repair.data.undone)) *
-                            repair.data.done
-                        }}%"
-                      ></div>
-                    </div>
-                    <!-- Progress  bar -->
-                  </th>
-
-                  <td
-                    (click)="goToDetails(repair.customerId, repair.data._id)"
-                    class="px-6 py-4"
-                  >
-                    <a routerLink="/customer/advancement-details">{{
-                      repair.data.car.model
-                    }}</a>
-                  </td>
-                  <td class="px-6 py-4">
-                    {{ repair.data.car.registration_number }}
-                  </td>
-                  <td class="px-6 py-4">
-                    {{ repair.data.car.registration_number }}
-                  </td>
-                </tr>
-              </ng-container>
-            </tbody>
-          </table>
+        <div *ngIf="loader; else content" class="mt-5 text-center">
+          <app-spinning-loader></app-spinning-loader>
         </div>
+        <ng-template #content>
+          <div class="relative overflow-x-auto">
+            <table
+              class="w-full text-sm text-left text-gray-500 dark:text-gray-400"
+            >
+              <thead
+                class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"
+              >
+                <tr>
+                  <th scope="col" class="px-6 py-3">Advancement</th>
+                  <th scope="col" class="px-6 py-3">Brand</th>
+                  <th scope="col" class="px-6 py-3">Model</th>
+                  <th scope="col" class="px-6 py-3">Registration number</th>
+                </tr>
+              </thead>
+              <tbody>
+                <ng-container *ngFor="let repair of unpaid; let i = index">
+                  <tr
+                    (click)="goToDetails(repair.customerId, repair.data._id)"
+                    class="bg-white border-b dark:bg-gray-800 dark:border-gray-700"
+                  >
+                    <th
+                      scope="row"
+                      class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                    >
+                      <!-- Progress bar -->
+                      <div
+                        class="w-full bg-gray-200 rounded-full h-2.5 dark:bg-gray-700"
+                      >
+                        <div
+                          class="bg-blue-600 h-2.5 rounded-full"
+                          style="width: {{
+                            (100 / (repair.data.done + repair.data.undone)) *
+                              repair.data.done
+                          }}%"
+                        ></div>
+                      </div>
+                      <!-- Progress  bar -->
+                    </th>
+
+                    <td class="px-6 py-4">
+                      {{ repair.data.car.model }}
+                    </td>
+                    <td class="px-6 py-4">
+                      {{ repair.data.car.registration_number }}
+                    </td>
+                    <td class="px-6 py-4">
+                      {{ repair.data.car.registration_number }}
+                    </td>
+                  </tr>
+                </ng-container>
+              </tbody>
+            </table>
+          </div>
+        </ng-template>
       </div>
     </div>
   </div>
