--- a/src/app/components/customer/retrive-car/retrive-car.component.html
+++ b/src/app/components/customer/retrive-car/retrive-car.component.html
@@ -9,6 +9,9 @@
             <h6 class="text-blueGray-700 text-xl font-bold">Retrievable car</h6>
           </div>
         </div>
+        <div *ngIf="loader" class="mt-5 text-center">
+          <app-spinning-loader></app-spinning-loader>
+        </div>
         <div class="relative overflow-x-auto">
           <table
             class="w-full text-sm text-left text-gray-500 dark:text-gray-400"
@@ -44,10 +47,11 @@
                   </td>
                   <td class="px-6 py-4">
                     {{ repair.total_amount }}
+                    {{ repair.is_retrieved }}
                   </td>
                   <td class="px-6 py-4">
                     <button
-                      *ngIf="repair.is_retrieved === true"
+                      *ngIf="repair.is_retrieved === false"
                       (click)="recover(repair._id)"
                       class="bg-green-400 text-white active:bg-green-400 font-bold uppercase text-xs px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none mr-1 ease-linear transition-all duration-150"
                     >
