--- a/src/app/components/workshop-manager/unconfirmed-repairs/unconfirmed-repairs.component.html
+++ b/src/app/components/workshop-manager/unconfirmed-repairs/unconfirmed-repairs.component.html
@@ -6,7 +6,7 @@
       >
         <div class="rounded-t bg-white mb-0 px-6 py-6">
           <div class="text-center flex justify-between">
-            <h6 class="text-blueGray-700 text-xl font-bold">Car depot</h6>
+            <h6 class="text-blueGray-700 text-xl font-bold">Repairs Cars</h6>
           </div>
         </div>
         <div class="relative overflow-x-auto">
