--- a/src/app/components/workshop-manager/unconfirmed-repairs/unconfirmed-repairs.component.html
+++ b/src/app/components/workshop-manager/unconfirmed-repairs/unconfirmed-repairs.component.html
@@ -9,6 +9,9 @@
             <h6 class="text-blueGray-700 text-xl font-bold">Repairs Cars</h6>
           </div>
         </div>
+        <div *ngIf="loader" class="mt-5 text-center">
+          <app-spinning-loader></app-spinning-loader>
+        </div>
         <div class="relative overflow-x-auto">
           <table
             class="w-full text-sm text-left text-gray-500 dark:text-gray-400"
